@@ -16,6 +16,8 @@ Arrow in Find box.
 
 The Set Type interface confuses people, because it usually doesn't work.
 
+Saved settings for display size and position make the window flicker when
+changing directory.
 
 			FEATURES FOR 2.1
 
