@@ -16,7 +16,7 @@
     <address><email>tal197 at users.sourceforge.net</email></address>
    </affiliation>
   </author>
-  <copyright><year>2003</year><holder>Thomas Leonard</holder></copyright>
+  <copyright><year>2004</year><holder>Thomas Leonard</holder></copyright>
   <legalnotice>
    <title>Conditions</title>
    <para>
@@ -3003,7 +3003,7 @@ $ rehash</screen>
    </refsect1>
 
    <refsect1><title>LICENSE</title>
-    <para>Copyright (C) 2003 Thomas Leonard.
+    <para>Copyright (C) 2004 Thomas Leonard.
      </para><para>
      You may redistribute copies of ROX-Filer under the terms of the GNU General
      Public License.
