@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+30-Jul-2004
+~~~~~~~~~~~
+Bugfix: Panel icons were no longer shown highlighted when selected.
+
 23-Jul-2004
 ~~~~~~~~~~~
 Bugfix: When opening a new directory with saved settings, the filer would
